fix light switch flicker

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -595,7 +595,7 @@ div.historyContainer .history .videoHistory {
   margin-left: -82px;
   margin-top: 10px;
   font-size: 10px;
-  background: rgba(0,0,0,0.80);
+  background: rgba(0,0,0,0.8);
   width: 75px;
   text-align: left;
   text-indent: 1px;
@@ -703,7 +703,7 @@ div.historyContainer .history .videoHistory {
   margin-left: -41px;
   margin-top: 6px;
   font-size: 5px;
-  background: rgba(0,0,0,0.80);
+  background: rgba(0,0,0,0.8);
   width: 37px;
   text-align: left;
   text-indent: 0.5px;
@@ -1403,7 +1403,7 @@ background-color: green,
 }
 .droppable-playlist-nameholder,
 .dropped-playlist-nameholder {
-  background: rgba(255,255,255,0.20);
+  background: rgba(255,255,255,0.2);
   border: 1px solid #808080;
   color: #fff;
 }
@@ -1418,7 +1418,7 @@ background-color: green,
 .active-playlist-nameholder,
 .active-playlist-nameholder:hover,
 .bv-nameholder.active-playlist-nameholder:hover {
-  background: rgba(255,255,255,0.20);
+  background: rgba(255,255,255,0.2);
 }
 #playlist-collection-input::-webkit-input-placeholder {
   color: #c0c0c0;
@@ -1457,7 +1457,7 @@ background-color: green,
   padding: 2px;
 }
 .bv-nameholder:hover {
-  background: rgba(255,255,255,0.10);
+  background: rgba(255,255,255,0.1);
 }
 .playlist-nameholder.selected-non-playlist-nameholder {
   color: #c0c0c0;
@@ -1692,7 +1692,7 @@ background-color: #4C4C4C,
   text-align: left;
   text-indent: 1px;
   font-size: 10px;
-  background: rgba(0,0,0,0.80);
+  background: rgba(0,0,0,0.8);
   font-weight: bold;
 }
 #playlist-display #video-list-container .videoListCellContainer .cellInfo .videoInfo .views {
@@ -1798,7 +1798,7 @@ background-color: #4C4C4C,
   text-align: left;
   text-indent: 0.5px;
   font-size: 5px;
-  background: rgba(0,0,0,0.80);
+  background: rgba(0,0,0,0.8);
   font-weight: bold;
 }
 #playlist-display #video-list-container .shrunken-playlist-cell .cellInfo .videoInfo .views {
@@ -1882,7 +1882,7 @@ background-color: #4C4C4C,
   text-align: left;
   text-indent: 0.5px;
   font-size: 5px;
-  background: rgba(0,0,0,0.80);
+  background: rgba(0,0,0,0.8);
   font-weight: bold;
 }
 .shrunken-playlist-cell .cellInfo .videoInfo .views {
@@ -2296,7 +2296,7 @@ background-color: #4C4C4C,
   line-height: 50%;
 }
 #fullscreen.fully {
-  background: rgba(255,255,255,0.30);
+  background: rgba(255,255,255,0.3);
   position: fixed;
   margin-left: 0px;
   bottom: 0;
@@ -2306,7 +2306,7 @@ background-color: #4C4C4C,
   margin-top: 0px;
 }
 #fullscreen.fully:hover {
-  background: rgba(255,255,255,0.60);
+  background: rgba(255,255,255,0.6);
 }
 .nametip {
   width: 70px;
@@ -2325,7 +2325,7 @@ background-color: #4C4C4C,
   font-family: "custom", "Segoe UI", "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
   left: 50%;
   margin-left: -225px;
-  background: rgba(50,50,50,0.70);
+  background: rgba(50,50,50,0.7);
   box-shadow: 0px 0px 10px #000;
   text-align: center;
 }
@@ -2407,7 +2407,7 @@ background-color: #4C4C4C,
 #nowPlayingFull .chFS:hover,
 #nowPlayingFull .voteContainerFS:hover {
   background-color: #34b7fe;
-  background: rgba(255,255,255,0.60);
+  background: rgba(255,255,255,0.6);
 }
 .chFS,
 .voteContainerFS,
@@ -2464,7 +2464,7 @@ background-color: #4C4C4C,
 }
 #fullscreenIcon.fully {
   background-color: #fff;
-  background: rgba(255,255,255,0.30);
+  background: rgba(255,255,255,0.3);
   position: fixed;
   margin-left: 0px;
   bottom: -13px;
